--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,7 @@ source.. = src-gen/,\
            src-commands/,\
            src-queries/,\
            model/,\
-           src/
+           src-workflow/
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
