--- a/pom.xml
+++ b/pom.xml
@@ -1,192 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>de.unistuttgart.iste.sqa.mpw.modeling</groupId>
-    <artifactId>de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator</artifactId>
-    <packaging>eclipse-plugin</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <parent>
+        <groupId>de.unistuttgart.iste.sqa.mpw.modeling</groupId>
+        <artifactId>hamstersimulator-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>./releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent</relativePath>
+    </parent>
     
-    <name>Hamstersimulator Modeling</name>
+    <artifactId>hamstersimulator-modeling-root</artifactId>
+	<packaging>pom</packaging>
     
-    <properties>
-        <maven.compiler.release>14</maven.compiler.release>
-        <tycho-version>2.2.0</tycho-version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <xtext.version>2.24.0</xtext.version>
-        <henshin.version>1.6.0</henshin.version>
-        <cdt.version>10.1</cdt.version>
-        <emf.mwe.launch.version>2.12.0</emf.mwe.launch.version>
-        <tycho.disableP2Mirrors>true</tycho.disableP2Mirrors>
-    </properties>
+    <name>Hamstersimulator Modeling Root Project</name>
     
-    <repositories>
-        <repository>
-            <id>eclipse</id>
-            <layout>p2</layout>
-            <url>https://download.eclipse.org/releases/2020-12/</url>
-        </repository>
-        <repository>
-            <id>Xtext Update Site</id>
-            <layout>p2</layout>
-            <url>https://download.eclipse.org/modeling/tmf/xtext/updates/releases/${xtext.version}/</url>
-        </repository>
-        <repository>
-            <id>Xpand Xtend Additional Support Update Site</id>
-            <layout>p2</layout>
-            <url>https://download.eclipse.org/modeling/m2t/xpand/updates/</url>
-        </repository>
-		<repository>
-			<id>Henshin Update Site</id>
-			<layout>p2</layout>
-			<url>https://download.eclipse.org/modeling/emft/henshin/updates/${henshin.version}/</url>
-		</repository>
-		<repository>
-			<id>CDT Update Site</id>
-			<layout>p2</layout>
-			<url>https://download.eclipse.org/tools/cdt/releases/${cdt.version}/</url>
-		</repository>
-        <repository>
-            <id>local-mpw-framework-repo</id>
-            <layout>p2</layout>
-            <url>${local.mpw.framework.repository}</url>
-        </repository>
-    </repositories>
-    
-    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>tycho-maven-plugin</artifactId>
-                <version>${tycho-version}</version>
-                <extensions>true</extensions>
-            </plugin>          
-            
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>mwe2Launcher</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <mainClass>components.mwe.Mwe2LauncherExtended</mainClass>
-                    <arguments>
-                        <argument>/${project.basedir}/src-workflow/workflow/hamstersimulator_workflow.mwe2</argument>
-                        <argument>-p</argument>
-                        <argument>includeJarsWithName=.*de.unistuttgart.*</argument>
-                        <argument>-p</argument>
-                        <argument>additionalArchivesPaths=${runtime.classpath}</argument>
-                    </arguments>
-                    <classpathScope>compile</classpathScope>
-                    <includePluginDependencies>true</includePluginDependencies>
-                    <cleanupDaemonThreads>false</cleanupDaemonThreads><!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.eclipse.emf</groupId>
-                        <artifactId>org.eclipse.emf.mwe2.launch</artifactId>
-                        <version>${emf.mwe.launch.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.eclipse.xtext</groupId>
-                        <artifactId>org.eclipse.xtext.common.types</artifactId>
-                        <version>${xtext.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.eclipse.xtext</groupId>
-                        <artifactId>org.eclipse.xtext.xtext.generator</artifactId>
-                        <version>${xtext.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.eclipse.xtext</groupId>
-                        <artifactId>org.eclipse.xtext.xbase</artifactId>
-                        <version>${xtext.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.eclipse.xtext</groupId>
-                        <artifactId>xtext-antlr-generator</artifactId>
-                        <version>[2.1.1, 3)</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.eclipse.xtend</groupId>
-                <artifactId>xtend-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>${basedir}/debugout</directory>
-                        </fileset>
-                    </filesets>
-                </configuration>
-            </plugin>
- 			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-dependency-plugin</artifactId>
-			    <version>3.1.2</version>
-			    
-	            <executions>
-	                <!-- Write jar runtime-classpath into property 'runtime.classpath' -->
-	                <execution>
-	                    <id>classpath</id>
-	                    <goals>
-	                        <goal>build-classpath</goal>
-	                    </goals>
-	                    <configuration>
-	                        <fileSeparator>/</fileSeparator>
-	                        <pathSeparator>;</pathSeparator>
-	                        <outputProperty>runtime.classpath</outputProperty>
-	                    </configuration>
-	                </execution>
-	            </executions>
-			</plugin>
-			
-        </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>
-                                            org.codehaus.mojo
-                                        </groupId>
-                                        <artifactId>
-                                            exec-maven-plugin
-                                        </artifactId>
-                                        <versionRange>
-                                            [3.0.0,)
-                                        </versionRange>
-                                        <goals>
-                                            <goal>java</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore></ignore>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+    <modules>
+        <module>bundle/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator</module>
+        <module>releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent</module>
+        <module>releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.targetplatform</module>
+    </modules>
     
 </project>
