Build: make bundle-classpath work

--- a/bundle/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/pom.xml
+++ b/bundle/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/pom.xml
@@ -49,6 +49,8 @@
 		                    <arguments>
 		                        <argument>/${project.basedir}/src-workflow/workflow/hamstersimulator_workflow.mwe2</argument>
 		                        <argument>-p</argument>
+		                        <argument>projectRoot=/${project.basedir}/../..</argument>
+		                        <argument>-p</argument>
 		                        <argument>includeJarsWithName=.*de.unistuttgart.*</argument>
 		                        <argument>-p</argument>
 		                        <argument>additionalArchivesPaths=${runtime.classpath}</argument>
