Build: rename root project, update mpw-repo version

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator</name>
+	<name>mpw-modeling-hamster</name>
 	<comment></comment>
 	<projects>
 	</projects>
