--- a/bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/.classpath
+++ b/bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="src" path="src-gen/"/>
 	<classpathentry kind="src" path="src-commands/"/>
 	<classpathentry kind="src" path="src-queries/"/>
-	<classpathentry kind="src" path="src-workflow/" /><classpathentry kind="src" path="model/"/>
-	
+	<classpathentry kind="src" path="model/"/>
+	<classpathentry kind="src" path="src-workflow/"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
