--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/parent/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/parent/pom.xml
@@ -4,13 +4,22 @@
 	<artifactId>parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 		
-	<name>Polyglot Hamstersimulator Maven Parent Project</name>
+	<name>Hamstersimulator Java Maven Parent Project</name>
 	<packaging>pom</packaging>
 
 	<properties>
 		<maven.compiler.release>15</maven.compiler.release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+	<repositories>
+		<repository>
+			<snapshots />
+			<id>snapshots</id>
+			<name>libs-snapshot</name>
+			<url>https://raw.githubusercontent.com/Fumapps/mpw-modeling-framework/mpw-framework-repository/repository</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
