--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/pom.xml
@@ -14,12 +14,9 @@
 	<version>1.0.0-SNAPSHOT</version>
 
 	<modules>
-		<module>
-			parent
-		</module>
-		<module>
-			core
-		</module>
+		<module>parent</module>
+		<module>core</module>
+		<module>ui</module>
 	</modules>
 
 </project>
