--- a/bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/pom.xml
+++ b/bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/pom.xml
@@ -88,12 +88,16 @@
                         <artifactId>xtext-antlr-generator</artifactId>
                         <version>[2.1.1, 3)</version>
                     </dependency>
+                    <dependency>
+                        <groupId>commons-cli</groupId>
+                        <artifactId>commons-cli</artifactId>
+                        <version>1.4</version>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>3.1.0</version>
                 <configuration>
                     <filesets>
                         <fileset>
