--- a/releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent/pom.xml
+++ b/releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent/pom.xml
@@ -18,6 +18,58 @@
     </properties>
     
     <build>
+    	<pluginManagement>
+            
+            <plugins>
+                
+                <!-- xtend-maven-plugin is in pluginManagement instead of in plugins 
+                    so that it doesn't run before the exec-maven-plugin's *.mwe2 gen; this way 
+                    we can list it after. -->
+                <plugin>
+                    <groupId>org.eclipse.xtend</groupId>
+                    <artifactId>xtend-maven-plugin</artifactId>
+                    <version>${xtext.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>compile</goal>
+                                <goal>xtend-install-debug-info</goal>
+                                <goal>testCompile</goal>
+                                <goal>xtend-test-install-debug-info</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                        <configuration>
+                            <outputDirectory>xtend-gen</outputDirectory>
+                            <testOutputDirectory>xtend-gen</testOutputDirectory>
+                        </configuration>
+                </plugin>
+            
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>2.5</version>
+                    <executions>
+                        <execution>
+                            <id>gen-clean</id>
+                            <goals>
+                                <goal>clean</goal>
+                            </goals>
+                            <configuration>
+                                <filesets>
+                                    <fileset>
+                                        <directory>${basedir}/xtend-gen</directory>
+                                    </fileset>
+                                </filesets>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                
+            </plugins>
+            
+        </pluginManagement>
+    
         <plugins>
             <plugin>
                 <groupId>org.eclipse.tycho</groupId>
@@ -28,7 +80,6 @@
             <plugin>
                 <groupId>org.eclipse.xtend</groupId>
                 <artifactId>xtend-maven-plugin</artifactId>
-                <version>${xtext.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.eclipse.tycho</groupId>
