--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/CMakeLists.txt
@@ -3,53 +3,45 @@ project(de_unistuttgart_iste_sqa_mpw_hamstersimulator_cpp)
 
 set(CMAKE_CXX_STANDARD 17)
 
+## Setup MPW Simulator Framework
+
+include(FetchContent)
+FetchContent_Populate(mpw_lib
+    GIT_REPOSITORY https://github.com/Fumapps/mpw-modeling-framework.git
+    GIT_TAG cpp-framework
+    SOURCE_DIR mpw_lib
+)
+add_subdirectory(${mpw_lib_SOURCE_DIR} mpw_lib/build)
+
+include_directories(${mpw_lib_SOURCE_DIR}/core/src/generated)
+include_directories(${mpw_lib_SOURCE_DIR}/core/src/impl)
+include_directories(${mpw_lib_SOURCE_DIR}/core/src/framework)
+
+## Hamstersimulator
+
 add_subdirectory(core/src/generated)
 add_subdirectory(core/src/impl)
-add_subdirectory(core/src/framework)
 set(SRCS ${GEN_SRCS} ${IMPL_SRCS} ${FRAMEWORK_SRCS})
 
 include_directories(core/src/generated)
 include_directories(core/src/impl)
-include_directories(core/src/framework)
+
 add_library(hamster_core SHARED ${SRCS})
+target_link_libraries(hamster_core mpw_framework_core_lib)
+
 add_library(hamster_core_lib STATIC ${SRCS})
+target_link_libraries(hamster_core_lib mpw_framework_core_lib)
 
 ## Setup GTEST
 
 enable_testing()
 
-## from: https://github.com/google/googletest/tree/master/googletest#incorporating-into-an-existing-cmake-project
-
-# Download and unpack googletest at configure time
-configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
-execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-        RESULT_VARIABLE result
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-    message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
-execute_process(COMMAND ${CMAKE_COMMAND} --build .
-        RESULT_VARIABLE result
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-    message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
-
-# Prevent overriding the parent project's compiler/linker
-# settings on Windows
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
-# Add googletest directly to our build. This defines
-# the gtest and gtest_main targets.
-add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-        ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-        EXCLUDE_FROM_ALL)
-
-# The gtest/gtest_main targets carry header search path
-# dependencies automatically when using CMake 2.8.11 or
-# later. Otherwise we have to add them here ourselves.
-if (CMAKE_VERSION VERSION_LESS 2.8.11)
-    include_directories("${gtest_SOURCE_DIR}/include")
-endif()
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG release-1.10.0
+)
+FetchContent_MakeAvailable(googletest)
 
 add_subdirectory(core/test)
