--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -31,6 +31,12 @@ jobs:
         uses: jwlawson/actions-setup-cmake@v1.5
         with:
           cmake-version: '3.17.x'
+      - name: Setup SDL2
+        run: |
+          sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
+          sudo apt-get update -y -qq
+          sudo apt-get install libsdl2-dev
+          sudo apt-get install libsdl2-image-dev
       - name: Build C++ Hamstersimulator
         run: cmake -S $PROJECT_CPP_DIR -B $BUILD_DIR && cmake --build $BUILD_DIR && cd $BUILD_DIR && ctest --extra-verbose
         env:
