C++ Simulator: render log and colored hamsters

--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/src/impl/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/src/impl/CMakeLists.txt
@@ -2,10 +2,9 @@ include(CMakeListsImpl.cmake)
 message("gen-src" ${IMPL_GEN_SRCS})
 set(IMPL_SRCS ${IMPL_SRCS}
     "core/src/impl/HamsterCore.h"
-    "core/src/impl/TerritoryLoader.h"
-    "core/src/impl/TerritoryLoader.cpp"
-    "core/src/impl/HamsterGameViewPresenter.h"
-    "core/src/impl/HamsterGameViewPresenter.cpp"
+    "core/src/impl/TerritoryLoader.h" "core/src/impl/TerritoryLoader.cpp"
+    "core/src/impl/HamsterGameViewPresenter.h" "core/src/impl/HamsterGameViewPresenter.cpp"
+    "core/src/impl/HamsterColors.h" "core/src/impl/HamsterColors.cpp"
     ${IMPL_GEN_SRCS}
     PARENT_SCOPE)
     
