--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/") ## use helper SDL2 cmake file (see https://github.com/trenki2/SDL2Test/tree/master/cmake)
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR})
+find_package(SDL2_ttf REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR})
 
 # Own Sources
 include_directories(.)
@@ -14,11 +15,14 @@ set(SRCS SdlApplication.cpp SdlApplication.h SdlApplicationListener.h HamsterApp
 
 # Executable
 add_executable(hamstersimulator_cpp main.cpp ${SRCS})
-target_link_libraries(hamstersimulator_cpp hamster_core_lib ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+target_link_libraries(hamstersimulator_cpp hamster_core_lib ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES})
 
 # Examples
 add_executable(hamstersimulator_example01 examples/Example01.cpp ${SRCS})
-target_link_libraries(hamstersimulator_example01 hamster_core_lib ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+target_link_libraries(hamstersimulator_example01 hamster_core_lib ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES})
+
+add_executable(hamstersimulator_example02 examples/Example02.cpp ${SRCS})
+target_link_libraries(hamstersimulator_example02 hamster_core_lib ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES})
 
 # Copy resources
 add_custom_command(TARGET hamstersimulator_cpp PRE_BUILD
@@ -35,6 +39,20 @@ add_custom_command(TARGET hamstersimulator_example01 PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         ${CMAKE_CURRENT_SOURCE_DIR}/resources/ ${CMAKE_CURRENT_BINARY_DIR}/resources)
 
+add_custom_command(TARGET hamstersimulator_example02 PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/resources/ ${CMAKE_CURRENT_BINARY_DIR}/resources)
+add_custom_command(TARGET hamstersimulator_example02 PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_CURRENT_SOURCE_DIR}/resources/ ${CMAKE_CURRENT_BINARY_DIR}/resources)
+
+add_custom_command(TARGET hamstersimulator_example02 PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/resources/ ${CMAKE_CURRENT_BINARY_DIR}/resources)
+add_custom_command(TARGET hamstersimulator_example02 PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_CURRENT_SOURCE_DIR}/resources/ ${CMAKE_CURRENT_BINARY_DIR}/resources)
+
 if (MSVC)
   # copy SDL DLLs to output
   add_custom_command(TARGET hamstersimulator_cpp POST_BUILD
@@ -44,6 +62,10 @@ if (MSVC)
   add_custom_command(TARGET hamstersimulator_cpp POST_BUILD
           COMMAND ${CMAKE_COMMAND} -E copy_directory
           ${SDL2_IMAGE_DIR}/lib/x64/ $<TARGET_FILE_DIR:hamstersimulator_cpp>)
+  # copy SDL_ttf DLLs to output
+  add_custom_command(TARGET hamstersimulator_cpp POST_BUILD
+          COMMAND ${CMAKE_COMMAND} -E copy_directory
+          ${SDL2_TTF_DIR}/lib/x64/ $<TARGET_FILE_DIR:hamstersimulator_cpp>)
 endif()
 
 ## From Stackoverflow (https://stackoverflow.com/a/62645348)
