--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -37,6 +37,7 @@ jobs:
           sudo apt-get update -y -qq
           sudo apt-get install libsdl2-dev
           sudo apt-get install libsdl2-image-dev
+          sudo apt-get install libsdl2-ttf-dev
       - name: Build C++ Hamstersimulator
         run: cmake -S $PROJECT_CPP_DIR -B $BUILD_DIR && cmake --build $BUILD_DIR && cd $BUILD_DIR && ctest --extra-verbose
         env:
