Build: rename parent artifact to de.unistuttgart.***.parent
Motivation: in eclipse, it is more symmetric with this name. The root project "mpw-modeling-hamster" then can be better distinguished.

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     
     <parent>
         <groupId>de.unistuttgart.iste.sqa.mpw.modeling</groupId>
-        <artifactId>hamstersimulator-parent</artifactId>
+        <artifactId>de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>./releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent</relativePath>
     </parent>
