--- a/bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/pom.xml
+++ b/bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/pom.xml
@@ -3,7 +3,7 @@
     
     <parent>
         <groupId>de.unistuttgart.iste.sqa.mpw.modeling</groupId>
-        <artifactId>hamstersimulator-parent</artifactId>
+        <artifactId>de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../../releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent</relativePath>
     </parent>
@@ -104,6 +104,7 @@
                     <filesets>
                         <fileset>
                             <directory>${basedir}/debugout</directory>
+                            <directory>${basedir}/src-gen</directory>
                         </fileset>
                     </filesets>
                 </configuration>
