--- a/releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent/.project
+++ b/releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hamstersimulator-parent</name>
+	<name>de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent</name>
 	<comment></comment>
 	<projects>
 	</projects>
