C++ Simulator: use SDL nanogui for gamelog list

--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui/CMakeLists.txt
@@ -23,6 +23,9 @@ set(SRCS SdlApplicationListener.h
     HamsterApplicationHandler.cpp HamsterApplicationHandler.h
     SdlGameInputInterface.cpp SdlGameInputInterface.h
     util/InputDialogWindow.cpp util/InputDialogWindow.h
+    util/GameLogControl.cpp util/GameLogControl.h
+    util/WidgetBackgroundWrapper.cpp util/WidgetBackgroundWrapper.h
+    util/LightTheme.h util/ListTheme.h
     SimpleHamsterGame.cpp SimpleHamsterGame.h)
 
 # Executable
