--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -1,4 +1,4 @@
-name: Java CI with Maven / CMake
+name: CI with Maven / CMake
 
 on:
   push:
@@ -44,3 +44,29 @@ jobs:
           PROJECT_CPP_DIR: simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp
           BUILD_DIR: simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/build
 
+      # Copy deployment artifacts
+      - name: copy cpp simulator
+        run: |
+          mkdir ~/deploy-cpp-simulator-to-branch
+          cp -R simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core ~/deploy-cpp-simulator-to-branch
+          cp -R simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui ~/deploy-cpp-simulator-to-branch
+          cp -R simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/resources ~/deploy-cpp-simulator-to-branch
+          cp simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/CMakeLists.txt ~/deploy-cpp-simulator-to-branch
+
+      # Prepare Git Repository
+      - name: set identity
+        run: git config user.email "44242539+fumapps@users.noreply.github.com" && git config user.name "Mario Fuksa"
+
+      # Deploy cpp-simulator to branch
+      - name: switch to cpp simulator branch
+        run: git fetch && git checkout cpp-simulator && git reset --hard 74be83085c54c29e2d554db2bf8942b49dde1a5d
+      - name: cpp simulator branch core folder
+        run: |
+          git clean -ffd
+          rm -rf ./core && rm -rf ./ui && rm -rf ./resources && rm -f CMakeLists.txt
+          cp -R ~/deploy-cpp-simulator-to-branch/core ./core
+          cp -R ~/deploy-cpp-simulator-to-branch/resources ./resources
+          cp -R ~/deploy-cpp-simulator-to-branch/ui ./ui
+          cp ~/deploy-cpp-simulator-to-branch/CMakeLists.txt ./CMakeLists.txt
+      - name: commit
+        run: git add -A && git commit -am 'C++ hamstersimulator code snapshot' && git push origin cpp-simulator --force
