C++ Simulator: restructure and modularize

--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/src/impl/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/src/impl/CMakeLists.txt
@@ -1,10 +1,10 @@
 include(CMakeListsImpl.cmake)
 message("gen-src" ${IMPL_GEN_SRCS})
 set(IMPL_SRCS ${IMPL_SRCS}
-    "core/src/impl/HamsterCore.h"
-    "core/src/impl/TerritoryLoader.h" "core/src/impl/TerritoryLoader.cpp"
-    "core/src/impl/HamsterGameViewPresenter.h" "core/src/impl/HamsterGameViewPresenter.cpp"
-    "core/src/impl/HamsterColors.h" "core/src/impl/HamsterColors.cpp"
+    "src/impl/HamsterCore.h"
+    "src/impl/TerritoryLoader.h" "src/impl/TerritoryLoader.cpp"
+    "src/impl/HamsterGameViewPresenter.h" "src/impl/HamsterGameViewPresenter.cpp"
+    "src/impl/HamsterColors.h" "src/impl/HamsterColors.cpp"
     ${IMPL_GEN_SRCS}
     PARENT_SCOPE)
     
