--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/test/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(.)
 
-add_executable(hamstersimulator_tests
+add_executable(hamstersimulator_core_tests
         HamsterCommandTest.cpp
         InitHamsterCommandTest.cpp
         TerritoryBuilderTest.cpp
@@ -11,10 +11,10 @@ add_executable(hamstersimulator_tests
         util/DirectionTestHelper.cpp util/DirectionTestHelper.h
         view/HamsterViewTestBase.cpp view/HamsterViewTestBase.h
         view/HamsterViewModelStringifier.cpp view/HamsterViewModelStringifier.h view/UserInputInterfaceFake.cpp view/UserInputInterfaceFake.h)
-target_link_libraries(hamstersimulator_tests hamster_core_lib gtest_main)
-add_test(NAME hamstersimulator_tests COMMAND hamstersimulator_tests WORKING_DIRECTORY $<TARGET_FILE_DIR:hamstersimulator_tests>)
+target_link_libraries(hamstersimulator_core_tests hamstersimulator_core_lib gtest_main)
+add_test(NAME hamstersimulator_core_tests COMMAND hamstersimulator_core_tests WORKING_DIRECTORY $<TARGET_FILE_DIR:hamstersimulator_core_tests>)
 
-# Copy resources
-add_custom_command(TARGET hamstersimulator_tests PRE_BUILD
+# Copy resources from binary root
+add_custom_command(TARGET hamstersimulator_core_tests PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_SOURCE_DIR}/resources/ $<TARGET_FILE_DIR:hamstersimulator_tests>/resources)
+        ${CMAKE_BINARY_DIR}/resources/ $<TARGET_FILE_DIR:hamstersimulator_core_tests>/resources)
