C++ Simulator: in CMake avoid "SYSTEM" for linking

--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/examples/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/examples/CMakeLists.txt
@@ -4,10 +4,10 @@ set(CMAKE_CXX_STANDARD 17)
 
 # Executable Examples
 add_executable(hamstersimulator_example01 Example01.cpp)
-target_link_libraries(hamstersimulator_example01 SYSTEM hamstersimulator_main_lib) # use SYSTEM to avoid transitive warnings
+target_link_libraries(hamstersimulator_example01 hamstersimulator_main_lib)
 
 add_executable(hamstersimulator_example02 Example02.cpp)
-target_link_libraries(hamstersimulator_example02 SYSTEM hamstersimulator_main_lib) # use SYSTEM to avoid transitive warnings
+target_link_libraries(hamstersimulator_example02 hamstersimulator_main_lib)
 
 # Copy resources from binary root
 add_custom_command(TARGET hamstersimulator_example01 PRE_BUILD
