--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/main/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/main/CMakeLists.txt
@@ -15,4 +15,4 @@ add_library(hamstersimulator_main_lib STATIC ${SRCS})
 target_include_directories(hamstersimulator_main_lib PUBLIC .)
 target_include_directories(hamstersimulator_main_lib PUBLIC ${hamstersimulator_core_lib_FACADE_INCLUDES})
 target_include_directories(hamstersimulator_main_lib PUBLIC ${mpw_framework_core_lib_FACADE_INCLUDES})
-target_link_libraries(hamstersimulator_main_lib PRIVATE hamstersimulator_core_lib PRIVATE SYSTEM hamstersimulator_ui_lib)
+target_link_libraries(hamstersimulator_main_lib PRIVATE hamstersimulator_core_lib PRIVATE hamstersimulator_ui_lib)
