C++ Simulator: make territory resizable

--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/examples/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/examples/CMakeLists.txt
@@ -12,15 +12,7 @@ target_link_libraries(hamstersimulator_example02 hamstersimulator_main_lib)
 add_executable(hamstersimulator_example03 Example03.cpp)
 target_link_libraries(hamstersimulator_example03 hamstersimulator_main_lib)
 
-# Copy resources from binary root
+# Copy resources from binary root (only trigger for one example)
 add_custom_command(TARGET hamstersimulator_example01 PRE_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_BINARY_DIR}/resources/ ${CMAKE_CURRENT_BINARY_DIR}/resources)
-
-add_custom_command(TARGET hamstersimulator_example02 PRE_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_BINARY_DIR}/resources/ ${CMAKE_CURRENT_BINARY_DIR}/resources)
-
-add_custom_command(TARGET hamstersimulator_example03 PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         ${CMAKE_BINARY_DIR}/resources/ ${CMAKE_CURRENT_BINARY_DIR}/resources)
