C++ Simulator: in CMakeLists.txt on Windows define root dir for CMakeListsLocalProperties
Motivation: dependent (other) CMake projects which use this hamstersimulator.cpp as a dependency are so able to also define a CMakeListsLocalProperties file.

--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui/CMakeLists.txt
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui/CMakeLists.txt
@@ -3,7 +3,7 @@ project(hamstersimulator_ui)
 set(CMAKE_CXX_STANDARD 17)
 
 if (MSVC)
-    include(CMakeListsLocalProperties.cmake) # define SDL properties on Windows
+    include(${CMAKE_SOURCE_DIR}/CMakeListsLocalProperties.cmake) # define SDL properties on Windows
 endif ()
 
 # SDL
