Java Simulator: modularize main/examples

--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/pom.xml
@@ -17,6 +17,8 @@
 		<module>parent</module>
 		<module>core</module>
 		<module>ui</module>
+		<module>main</module>
+		<module>examples</module>
 	</modules>
 
 </project>
