--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/examples/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/examples/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>main</artifactId>
+	<artifactId>examples</artifactId>
 
-	<name>Hamster Simulator Main</name>
+	<name>Hamster Simulator Examples</name>
 
 	<parent>
 		<groupId>de.unistuttgart.iste.sqa.mpw.hamstersimulator</groupId>
@@ -14,13 +14,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.unistuttgart.iste.sqa.mpw.hamstersimulator</groupId>
-			<artifactId>core</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>de.unistuttgart.iste.sqa.mpw.framework</groupId>
-			<artifactId>utils</artifactId>
+			<artifactId>main</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
