--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/main/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/main/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>ui</artifactId>
+	<artifactId>main</artifactId>
 
-	<name>Hamster Simulator UI</name>
+	<name>Hamster Simulator Main</name>
 
 	<parent>
 		<groupId>de.unistuttgart.iste.sqa.mpw.hamstersimulator</groupId>
@@ -13,36 +13,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-base</artifactId>
-			<version>15</version>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
-			<version>RELEASE</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx</artifactId>
-			<version>15</version>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-fxml</artifactId>
-			<version>15</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-graphics </artifactId>
-			<version>15</version>
-			<classifier>mac</classifier>
+			<groupId>de.unistuttgart.iste.sqa.mpw.hamstersimulator</groupId>
+			<artifactId>core</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.unistuttgart.iste.sqa.mpw.hamstersimulator</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>ui</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
