--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/parent/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/parent/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 		
-	<name>Hamstersimulator Java Maven Parent Project</name>
+	<name>Hamster Simulator Java Maven Parent Project</name>
 	<packaging>pom</packaging>
 
 	<properties>
