--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<artifactId>root</artifactId>
-	<name>Polyglot Hamster Simulator Root Project</name>
+	<name>Hamster Simulator Root Project</name>
 	<packaging>pom</packaging>
 	<version>1.0.0-SNAPSHOT</version>
 
